--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -154,6 +154,34 @@
     </div>
         
         
+    <!-- Cuarta Card del proyecto -->
+    <div id="project" class="project-card">
+      <!-- Contenido del proyecto -->
+      <div class="content">
+        <h2 class="project-title" style="font-weight: bold;">2. Landing Page Peliculas Ahora</h2>
+        <p class="project-description">Es una landing Page para una ver imformacion de peliculas populares, su principal función es poder visualizar de forma interactiva, el año, la categoria, la sinopsis de peliculas, esta adaptada para diversos tamaños de pantalla, en cada pagina de cada pelicula, hay un boton que nos envia al trailer de cada pelicula.</p>
+        <div class="tags">
+          <div># HTML</div>
+          <div># CSS</div>
+          <div># JavaScript</div>
+          <div># Bootstrap</div>
+          <div># Next js</div>
+              
+        </div>
+      </div>
+      <!-- Imagen del proyecto -->
+      <div class="image">
+        <img src="/images/ImagenPeliculas.png" alt="Captura del proyecto">
+        <!-- Botón circular -->
+        <a href="https://github.com/Joseph2006t/landing-peliculas_Joseph" class="button-circle" aria-label="GitHub del proyecto">
+          <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
+            <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Zm4.71 8.71-4 4a1 1 0 0 1-1.42 0l-4-4a1 1 0 0 1 1.42-1.42L11 11.59V7a1 1 0 0 1 2 0v4.59l2.29-2.3a1 1 0 0 1 1.42 1.42Z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+
     <!-- Puedes agregar más proyectos de la misma manera -->
         
         
