--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -158,8 +158,8 @@
     <div id="project" class="project-card">
       <!-- Contenido del proyecto -->
       <div class="content">
-        <h2 class="project-title" style="font-weight: bold;">2. Landing Page Peliculas Ahora</h2>
-        <p class="project-description">Es una landing Page para una ver imformacion de peliculas populares, su principal función es poder visualizar de forma interactiva, el año, la categoria, la sinopsis de peliculas, esta adaptada para diversos tamaños de pantalla, en cada pagina de cada pelicula, hay un boton que nos envia al trailer de cada pelicula.</p>
+        <h2 class="project-title" style="font-weight: bold;">2. Landing Page Peli Info</h2>
+        <p class="project-description">Es una landing Page para una ver imformación de películas populares, su principal función es poder visualizar de forma interactiva, el año, la categoria, la sinopsis de peliculas, esta adaptada para diversos tamaños de pantalla, en cada pagina de cada película, hay un boton que nos envia al trailer de cada película.</p>
         <div class="tags">
           <div># HTML</div>
           <div># CSS</div>
